--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,15 @@
 [pytest]
 pythonpath = .
 asyncio_mode = strict
+asyncio_default_fixture_loop_scope = function
 testpaths = tests
 python_files = test_*.py
 markers =
     asyncio: mark a test as an asyncio coroutine
 python_classes = Test*
 python_functions = test_*
+timeout = 3
+# Yorum satırları ayrı satırlarda olmalı
+# Timeout 3 saniye olarak ayarlandı
+log_cli = true
+log_level = DEBUG
